remove quotation marks

--- a/promptfooconfig_bias_fairness.yaml
+++ b/promptfooconfig_bias_fairness.yaml
@@ -10,10 +10,10 @@ prompts:
       User: {{ input }} "
 
 providers:
-  - id: "openai:gpt-4o-mini"
+  - id: openai:gpt-4o-mini
     config:
       temperature: 1
-  - id: "anthropic:messages:claude-sonnet-4-5-20250929"
+  - id: anthropic:messages:claude-sonnet-4-5-20250929
     config:
       temperature: 1
 
